--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
  
 /*
-
+sempre aundo tem uma animacao ponha o tranforme na parte final do coddigo
 paleta de cores
 verde #49a09d
 lilas #5f2c82
@@ -30,15 +30,13 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden; /*serve pra deixa a imagem redendoda*/
-
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
-
+    transform: translate(-50%, -50%); /* igual a qqui*/
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -47,11 +45,108 @@ section#login > div#imagem {
     display: block;
     background: #5f2c82 url(../imagens/pexels-pixabay-315938\ \(1\).jpg) no-repeat;
     background-size: cover;
-    height: 200px;
+    height: 190px;
     
 }
 
 section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+
+
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+    
+div#formulario > p {
+    font-size: 0.8em;
+    margin: 10px;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    border: 2px solid;
+    display: block;
+    width: 102%;
+    height: 40px;
+   border-radius: 8px;
+   margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span  {
+    color: white;
+    font-size: 1.7em;
+    padding: 5px;
+}
+
+
+
+
+.campo {
+    display: flex;
+}
+
+div.campo > input {
+    background-color: #5fccc8;
+    font-size: 1em;
+    width: calc(100% - 42px) ;
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-7px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
+form > input[type=submit] {
+ display: block;
+font-size: 1em;
+width: 100%;
+height: 40px;
+background-color: #3c8582;
+color: white;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+background-color: #2d6462;
+
+}
+
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100px;
+    height: 50px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #6cd3cf;
+}
+
+
+form > a.botao > i {
+    font-size: 0.8em;
 }
